--- a/public/locales/ko/translation.json
+++ b/public/locales/ko/translation.json
@@ -40,10 +40,15 @@
       "tourist attraction": "관광지"
     },
     "results": "검색 결과",
-    "clearResults": "검색 결과 지우기"
+    "clearResults": "검색 결과 지우기",
+    "error": {
+      "locationNotFound": "검색 중심 위치를 찾을 수 없습니다.",
+      "noResults": "{{radius}}m 반경 내에 검색 결과가 없습니다.",
+      "generic": "검색 오류"
+    }
   },
   "chat": {
-    "title": "AI 채팅",
+    "title": "AI 여행 에이전트",
     "placeholder": "메시지를 입력하세요...",
     "close": "닫기",
     "clear": "기록 삭제",
@@ -61,9 +66,32 @@
     "closed": "영업 종료",
     "address": "주소",
     "phone": "전화번호",
-    "website": "웹사이트"
+    "website": "웹사이트",
+    "delete": "삭제",
+    "deleteConfirm": "이 장소를 삭제하시겠습니까?"
+  },
+  "database": {
+    "type": "유형",
+    "name": "이름",
+    "rating": "평점",
+    "reviews": "리뷰",
+    "address": "주소",
+    "website": "웹사이트",
+    "delete": "삭제",
+    "link": "링크"
   },
   "route": {
     "clearRoute": "경로 지우기"
+  },
+  "welcome": {
+    "title": "Travel Map에 오신 것을 환영합니다!",
+    "subtitle": "AI 기반 여행 경로 계획 추천 서비스",
+    "description": "Google Maps API를 활용하여 장소 검색과 AI 여행 에이전트를 통해 여행 계획을 도와드립니다.",
+    "feature1": "장소 검색: 원하는 장소를 찾아보세요. 위치 정보가 없는(ex.호텔, 음식점, 관광지 등)검색어는 보고 있는 지도 위치를 기준으로 찾습니다.",
+    "feature2": "장소 저장: 관심 있는 장소를 선택하고 저장하여 AI 여행 에이전트에게 알려주세요.",
+    "feature3": "AI 여행 에이전트: 출발지, 출발시간, 기간 등을 알려주면 저장된 장소를 기반으로 더 빠르고 정확한 여행 계획과 추천 그리고 경로를 지도에 표시합니다.",
+    "settingsTitle": "초기 설정",
+    "feature4": "검색 반경과 최소 평점을 설정하면 검색 결과를 설정에 맞춰 보여줍니다.",
+    "startButton": "시작하기"
   }
 }
