--- a/public/locales/zh/translation.json
+++ b/public/locales/zh/translation.json
@@ -40,10 +40,15 @@
       "tourist attraction": "旅游景点"
     },
     "results": "搜索结果",
-    "clearResults": "清除搜索结果"
+    "clearResults": "清除搜索结果",
+    "error": {
+      "locationNotFound": "未找到搜索中心位置。",
+      "noResults": "{{radius}}m半径内未找到结果。",
+      "generic": "搜索错误"
+    }
   },
   "chat": {
-    "title": "AI 聊天",
+    "title": "AI 旅游代理",
     "placeholder": "输入消息...",
     "close": "关闭",
     "clear": "清除",
@@ -61,9 +66,32 @@
     "closed": "已关闭",
     "address": "地址",
     "phone": "电话",
-    "website": "网站"
+    "website": "网站",
+    "delete": "删除",
+    "deleteConfirm": "确定要删除此地点吗？"
+  },
+  "database": {
+    "type": "类型",
+    "name": "名称",
+    "rating": "评分",
+    "reviews": "评论",
+    "address": "地址",
+    "website": "网站",
+    "delete": "删除",
+    "link": "链接"
   },
   "route": {
     "clearRoute": "清除路线"
+  },
+  "welcome": {
+    "title": "欢迎使用 Travel Map！",
+    "subtitle": "基于AI的旅行路线规划推荐服务",
+    "description": "此应用利用Google Maps API，通过地点搜索和AI旅行代理帮助您规划旅行。",
+    "feature1": "地点搜索：查找您想要的地点。没有位置信息的搜索词（如：酒店、餐厅、景点等）将基于您正在查看的地图位置进行搜索。",
+    "feature2": "保存地点：选择并保存感兴趣的地点，告知AI旅行代理。",
+    "feature3": "AI旅行代理：提供您的出发地、出发时间、行程时长等信息，即可基于保存的地点获得更快更准确的旅行计划、推荐以及在地图上显示的路线。",
+    "settingsTitle": "初始设置",
+    "feature4": "设置搜索半径和最低评分，搜索结果将根据您的设置显示。",
+    "startButton": "开始"
   }
 }
