--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -69,7 +69,14 @@
     "phone": "Phone",
     "website": "Website",
     "delete": "Delete",
-    "deleteConfirm": "Do you want to delete this place?"
+    "deleteConfirm": "Do you want to delete this place?",
+    "price": {
+      "free": "Free",
+      "inexpensive": "Inexpensive",
+      "moderate": "Moderate",
+      "expensive": "Expensive",
+      "veryExpensive": "Very Expensive"
+    }
   },
   "database": {
     "type": "Type",
